Simple Search Engine using tfidf for trump speech and query

--- a/6_week/simple_search_engine/simpleSearchEngine.ipynb
+++ b/6_week/simple_search_engine/simpleSearchEngine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,15 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n"
+      "['.//texts/Trump Immigration Speech 8-31-16.txt', './/texts/Trump National Prayer Breakfast.txt', './/texts/Trump Congressional Address.txt', './/texts/Trump Police Chiefs Speech.txt', './/texts/Trump Black History Month Speech.txt', './/texts/Trump Inauguration Speech.txt', './/texts/Trump CIA Speech.txt', './/texts/Trump Nomination Speech.txt', './/texts/Trump Florida Rally 2-18-17.txt', './/texts/Trump Response to Healthcare Bill Failure.txt', './/texts/Trump CPAC Speech.txt']\n",
+      "['Trump Immigration Speech 8-31-16', 'Trump National Prayer Breakfast', 'Trump Congressional Address', 'Trump Police Chiefs Speech', 'Trump Black History Month Speech', 'Trump Inauguration Speech', 'Trump CIA Speech', 'Trump Nomination Speech', 'Trump Florida Rally 2-18-17', 'Trump Response to Healthcare Bill Failure', 'Trump CPAC Speech']\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "[11 rows x 3474 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,15 +501,182 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]]\n",
+      "['000' '10' '100' ... 'zero' 'zone' 'zones']\n"
+     ]
+    }
+   ],
    "source": [
     "query_path = \"./query/query.txt\"\n",
     "query_vector = tfidf_vectorizer.transform([query_path])\n",
     "\n",
     "query_df = pd.DataFrame(query_vector.toarray(), columns=tfidf_vectorizer.get_feature_names_out())\n",
     "print(query_vector.toarray())\n",
-    "print(tfidf_vectorizer.get_feature_names_out())"
+    "print(tfidf_vectorizer.get_feature_names_out())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".//texts/Trump Inauguration Speech.txt\n",
+      "[[0.04133176 0.0291042  0.10933071 0.03025857 0.04713956 0.1199501\n",
+      "  0.04523411 0.09078907 0.05392253 0.05616625 0.08864281]]\n",
+      "0 [0.04133176 0.0291042  0.10933071 0.03025857 0.04713956 0.1199501\n",
+      " 0.04523411 0.09078907 0.05392253 0.05616625 0.08864281]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cosine_similarities = cosine_similarity(query_df, tfidf_df)\n",
+    "print(text_files[cosine_similarities.argmax()])\n",
+    "print(cosine_similarities)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, val in range(len(cosine_similarities[0])):\n",
+    "    print(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text file:  Trump Immigration Speech 8-31-16  , Similarity:  0.041331760413373234\n",
+      "Text file:  Trump National Prayer Breakfast  , Similarity:  0.029104196110069668\n",
+      "Text file:  Trump Congressional Address  , Similarity:  0.10933070585808205\n",
+      "Text file:  Trump Police Chiefs Speech  , Similarity:  0.03025857207314158\n",
+      "Text file:  Trump Black History Month Speech  , Similarity:  0.04713955905442806\n",
+      "Text file:  Trump Inauguration Speech  , Similarity:  0.11995010220187391\n",
+      "Text file:  Trump CIA Speech  , Similarity:  0.045234114663388586\n",
+      "Text file:  Trump Nomination Speech  , Similarity:  0.09078906556252624\n",
+      "Text file:  Trump Florida Rally 2-18-17  , Similarity:  0.053922530556413655\n",
+      "Text file:  Trump Response to Healthcare Bill Failure  , Similarity:  0.05616624749241182\n",
+      "Text file:  Trump CPAC Speech  , Similarity:  0.08864281287085676\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc_and_similarity = []\n",
+    "\n",
+    "for idx, val in enumerate(cosine_similarities[0]):\n",
+    "    print(\"Text file: \", text_titles[idx], \" , Similarity: \", val)\n",
+    "    doc_and_similarity.append((text_titles[idx], round(val, 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Trump Immigration Speech 8-31-16', np.float64(0.041)), ('Trump National Prayer Breakfast', np.float64(0.029)), ('Trump Congressional Address', np.float64(0.109)), ('Trump Police Chiefs Speech', np.float64(0.03)), ('Trump Black History Month Speech', np.float64(0.047)), ('Trump Inauguration Speech', np.float64(0.12)), ('Trump CIA Speech', np.float64(0.045)), ('Trump Nomination Speech', np.float64(0.091)), ('Trump Florida Rally 2-18-17', np.float64(0.054)), ('Trump Response to Healthcare Bill Failure', np.float64(0.056)), ('Trump CPAC Speech', np.float64(0.089))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc_and_similarity)\n",
+    "doc_and_similarity.sort(key= lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File:  Trump Inauguration Speech  :::: Similarity Score:  0.12\n",
+      "File:  Trump Congressional Address  :::: Similarity Score:  0.109\n",
+      "File:  Trump Nomination Speech  :::: Similarity Score:  0.091\n",
+      "File:  Trump CPAC Speech  :::: Similarity Score:  0.089\n",
+      "File:  Trump Response to Healthcare Bill Failure  :::: Similarity Score:  0.056\n",
+      "File:  Trump Florida Rally 2-18-17  :::: Similarity Score:  0.054\n",
+      "File:  Trump Black History Month Speech  :::: Similarity Score:  0.047\n",
+      "File:  Trump CIA Speech  :::: Similarity Score:  0.045\n",
+      "File:  Trump Immigration Speech 8-31-16  :::: Similarity Score:  0.041\n",
+      "File:  Trump Police Chiefs Speech  :::: Similarity Score:  0.03\n",
+      "File:  Trump National Prayer Breakfast  :::: Similarity Score:  0.029\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (file, score) in doc_and_similarity:\n",
+    "    print(f\"File: \", file, ' :::: Similarity Score: ', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
