--- a/3_week/data_collection_countries_continents.ipynb
+++ b/3_week/data_collection_countries_continents.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" \\n\\nCreating Data Frame\\n\\n1. Collect the name of all the countries per continent from English Wikipedia.\\n\\n2. Create countries-continents pandas dataframe. Dataframe should have two columns: country, continent.\\n\\n3. Collect the happiness score, GDP per capital, social support, healthy life expectancy, freedom to make life choices, generosity, and perceptions of corruption per country in 2019 from English Wikipedia and put all collected information in a dataframe.\\n\\n4. Create a new dataframe with all the information that you collected and save it in a CSV.\\n\\n \\n\\nLinks:\\n\\nhttps://en.wikipedia.org/wiki/World_Happiness_Report#2019_report\\nhttps://simple.wikipedia.org/wiki/List_of_countries_by_continents\\nRecommended libraries to use: \\n\\nBeautifuisoup - https://www.crummy.com/software/BeautifulSoup/bs4/doc/  #For HTM parsing \\nrequests   - https://pypi.org/project/requests/ #For downloading the HTML code for the Wikipedia page, we need to import the requests' library\\n\\n\\nAttention: you can get creative and use different libraries. \\nThere is not one particular solution. Be creative and try to find your way. Collaborate with your peers, if you feel like you can not do it alone. \\n\\nEven if you do just part of it - bring it with you to the tutorial, so that we can discuss and improve it together.  \\n\\n\\nDisclaimer: if no one does it - then we can not have a proper discussion.  So it is in your best interests to actually invest time in this task!\\n\\nGood luck! Looking forward to see your solutions! \\n\\n\""
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" \n",
     "\n",
@@ -45,9 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nExample DataFrame: \\nCountry | Continent\\nIndia   | Asia\\nGermany | Europe\\nChina   | Asia\\n\\n\\nFlow:\\n    pypi -> request module for downloading the HTML code from wikipedia\\n    BeautifulSoup for parsing the downloaded HTML file\\n\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" \n",
     "Example DataFrame: \n",
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,14 +186,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 408 entries, 0 to 407\n",
+      "RangeIndex: 204 entries, 0 to 203\n",
       "Data columns (total 2 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   Continent  408 non-null    object\n",
-      " 1   Country    408 non-null    object\n",
+      " 0   Continent  204 non-null    object\n",
+      " 1   Country    204 non-null    object\n",
       "dtypes: object(2)\n",
-      "memory usage: 6.5+ KB\n"
+      "memory usage: 3.3+ KB\n"
      ]
     }
    ],
@@ -182,9 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nCollect the \\nhappiness score, GDP per capital, social support, healthy life expectancy, \\nfreedom to make life choices, generosity, and perceptions of corruption \\nper country in 2019 from English Wikipedia and put all collected information in a dataframe.\\n\\n\\nhttps://en.wikipedia.org/wiki/World_Happiness_Report#2019_report\\n\\n\\nstructure:\\n    parent: div, class = mw-heading, mw-heading3\\n        h3: id: 2019_report\\n    sibling of parent: div\\n        child: table\\n\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" \n",
     "Collect the \n",
@@ -207,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -360,14 +393,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 408 entries, 0 to 407\n",
+      "RangeIndex: 204 entries, 0 to 203\n",
       "Data columns (total 2 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   Continent  408 non-null    object\n",
-      " 1   Country    408 non-null    object\n",
+      " 0   Continent  204 non-null    object\n",
+      " 1   Country    204 non-null    object\n",
       "dtypes: object(2)\n",
-      "memory usage: 6.5+ KB\n"
+      "memory usage: 3.3+ KB\n"
      ]
     }
    ],
@@ -377,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -468,18 +501,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>3.203</td>\n",
-       "      <td>0.350</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>0.361</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.158</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>Asia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Albania</td>\n",
        "      <td>4.719</td>\n",
        "      <td>0.947</td>\n",
@@ -491,120 +512,144 @@
        "      <td>Europe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>5.211</td>\n",
+       "      <td>1.002</td>\n",
+       "      <td>1.160</td>\n",
+       "      <td>0.785</td>\n",
+       "      <td>0.086</td>\n",
+       "      <td>0.073</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>4.719</td>\n",
-       "      <td>0.947</td>\n",
-       "      <td>0.848</td>\n",
-       "      <td>0.874</td>\n",
-       "      <td>0.383</td>\n",
-       "      <td>0.178</td>\n",
-       "      <td>0.027</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Europe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>5.211</td>\n",
-       "      <td>1.002</td>\n",
-       "      <td>1.160</td>\n",
-       "      <td>0.785</td>\n",
-       "      <td>0.086</td>\n",
-       "      <td>0.073</td>\n",
-       "      <td>0.114</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Africa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>5.211</td>\n",
-       "      <td>1.002</td>\n",
-       "      <td>1.160</td>\n",
-       "      <td>0.785</td>\n",
-       "      <td>0.086</td>\n",
-       "      <td>0.073</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>6.086</td>\n",
+       "      <td>1.092</td>\n",
+       "      <td>1.432</td>\n",
+       "      <td>0.881</td>\n",
+       "      <td>0.471</td>\n",
+       "      <td>0.066</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>South America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>4.559</td>\n",
+       "      <td>0.850</td>\n",
+       "      <td>1.055</td>\n",
+       "      <td>0.815</td>\n",
+       "      <td>0.283</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>7.228</td>\n",
+       "      <td>1.372</td>\n",
+       "      <td>1.548</td>\n",
+       "      <td>1.036</td>\n",
+       "      <td>0.557</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>Oceania</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>7.246</td>\n",
+       "      <td>1.376</td>\n",
+       "      <td>1.475</td>\n",
+       "      <td>1.016</td>\n",
+       "      <td>0.532</td>\n",
+       "      <td>0.244</td>\n",
+       "      <td>0.226</td>\n",
+       "      <td>Europe</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Country Happiness score    GDP Social support Healthy life expectancy  \\\n",
-       "0  Afghanistan           3.203  0.350          0.517                   0.361   \n",
-       "1  Afghanistan           3.203  0.350          0.517                   0.361   \n",
-       "2      Albania           4.719  0.947          0.848                   0.874   \n",
-       "3      Albania           4.719  0.947          0.848                   0.874   \n",
-       "4      Algeria           5.211  1.002          1.160                   0.785   \n",
-       "5      Algeria           5.211  1.002          1.160                   0.785   \n",
-       "6      Andorra             NaN    NaN            NaN                     NaN   \n",
-       "7      Andorra             NaN    NaN            NaN                     NaN   \n",
-       "8       Angola             NaN    NaN            NaN                     NaN   \n",
-       "9       Angola             NaN    NaN            NaN                     NaN   \n",
+       "               Country Happiness score    GDP Social support  \\\n",
+       "0          Afghanistan           3.203  0.350          0.517   \n",
+       "1              Albania           4.719  0.947          0.848   \n",
+       "2              Algeria           5.211  1.002          1.160   \n",
+       "3              Andorra             NaN    NaN            NaN   \n",
+       "4               Angola             NaN    NaN            NaN   \n",
+       "5  Antigua and Barbuda             NaN    NaN            NaN   \n",
+       "6            Argentina           6.086  1.092          1.432   \n",
+       "7              Armenia           4.559  0.850          1.055   \n",
+       "8            Australia           7.228  1.372          1.548   \n",
+       "9              Austria           7.246  1.376          1.475   \n",
        "\n",
-       "  Freedom to make life choices Generosity Perceptions of corruption Continent  \n",
-       "0                        0.000      0.158                     0.025      Asia  \n",
-       "1                        0.000      0.158                     0.025      Asia  \n",
-       "2                        0.383      0.178                     0.027    Europe  \n",
-       "3                        0.383      0.178                     0.027    Europe  \n",
-       "4                        0.086      0.073                     0.114    Africa  \n",
-       "5                        0.086      0.073                     0.114    Africa  \n",
-       "6                          NaN        NaN                       NaN    Europe  \n",
-       "7                          NaN        NaN                       NaN    Europe  \n",
-       "8                          NaN        NaN                       NaN    Africa  \n",
-       "9                          NaN        NaN                       NaN    Africa  "
+       "  Healthy life expectancy Freedom to make life choices Generosity  \\\n",
+       "0                   0.361                        0.000      0.158   \n",
+       "1                   0.874                        0.383      0.178   \n",
+       "2                   0.785                        0.086      0.073   \n",
+       "3                     NaN                          NaN        NaN   \n",
+       "4                     NaN                          NaN        NaN   \n",
+       "5                     NaN                          NaN        NaN   \n",
+       "6                   0.881                        0.471      0.066   \n",
+       "7                   0.815                        0.283      0.095   \n",
+       "8                   1.036                        0.557      0.332   \n",
+       "9                   1.016                        0.532      0.244   \n",
+       "\n",
+       "  Perceptions of corruption      Continent  \n",
+       "0                     0.025           Asia  \n",
+       "1                     0.027         Europe  \n",
+       "2                     0.114         Africa  \n",
+       "3                       NaN         Europe  \n",
+       "4                       NaN         Africa  \n",
+       "5                       NaN  North America  \n",
+       "6                     0.050  South America  \n",
+       "7                     0.064           Asia  \n",
+       "8                     0.290        Oceania  \n",
+       "9                     0.226         Europe  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,13 +660,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.to_csv(\"merged_output.csv\", index=False, encoding=\"utf-8\")\n",
     "df.to_csv(\"country_continent.csv\", index=False, encoding=\"utf-8\")\n",
     "content_df.to_csv(\"country_statistics.csv\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_df[\"Country\"] = content_df[\"Country\"].str.strip()\n",
+    "df[\"Country\"] = df[\"Country\"].str.strip()\n",
+    "\n",
+    "# Perform inner join\n",
+    "merged_df = pd.merge(content_df, df, on=\"Country\", how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 146 entries, 0 to 145\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                        Non-Null Count  Dtype \n",
+      "---  ------                        --------------  ----- \n",
+      " 0   Country                       146 non-null    object\n",
+      " 1   Happiness score               146 non-null    object\n",
+      " 2   GDP                           146 non-null    object\n",
+      " 3   Social support                146 non-null    object\n",
+      " 4   Healthy life expectancy       146 non-null    object\n",
+      " 5   Freedom to make life choices  146 non-null    object\n",
+      " 6   Generosity                    146 non-null    object\n",
+      " 7   Perceptions of corruption     146 non-null    object\n",
+      " 8   Continent                     146 non-null    object\n",
+      "dtypes: object(9)\n",
+      "memory usage: 10.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df.info()"
    ]
   },
   {
